# rust-bt-downloader

./: .gitignore  Cargo.toml  README.md
packaging/macos/: AppIcon.icns  Info.plist
scripts/: build-macos-app.sh
src/: bt.rs  config.rs  engine.rs  font.rs  main.rs  manager.rs  task.rs  ui.rs
